fix joke overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,8 +90,10 @@
     background-color: rgb(248, 246, 178);
     width:42vw;
     min-height:70px;
+    max-height:130px;
     padding:10px;
     margin-top:10px;
+    overflow-y: scroll;
 }
 
 #pass-container {
